--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@ git push -u origin master
 <!DOCTYPE html>
 <html>
 <title> GREAT BUY! </title>
+
+<body>
+  <p> For my next trick, I'll turn this bottle of Rumbo into Domestic Violence </p>  
+</body>
+
 </html>
