--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ git push -u origin master
 <!DOCTYPE html>
 <html>
 <title> GREAT BUY! </title>
-
+<head>
+  <h1> meem </h1>  
+</head>  
 <body>
   <p> For my next trick, I'll turn this bottle of Rumbo into Domestic Violence </p>  
 </body>
